Name:                   HFuse
Version:                0.2.5.0
License:                BSD3
License-File:           LICENSE
Author:                 Jeremy Bobbio
Maintainer:             Montez Fitzpatrick <montezf@gmail.com>
Synopsis:               HFuse is a binding for the Linux FUSE library.
Description:            Bindings for the FUSE library, compatible with Linux, OSXFUSE and FreeBSD.
Homepage:               https://github.com/m15k/hfuse
Category:               System
Stability:              Experimental
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-source-files:
        CHANGELOG.md
        README.md

Library
  Build-Depends:          base >= 4 && < 5, unix, bytestring
  Exposed-Modules:        System.Fuse
  Default-Extensions:             ForeignFunctionInterface ScopedTypeVariables EmptyDataDecls
  Includes:               dirent.h, fuse.h, fcntl.h
  Include-Dirs:           /usr/include, /usr/local/include, .
  if os(darwin)
      CC-Options:           "-DMACFUSE"
      CC-Options:           "-DFUSE_USE_VERSION=26"
      Include-Dirs:           /usr/local/include/fuse
  else
      if os(freebsd)
         Includes:           sys/param.h, sys/mount.h
         CC-Options:           "-Df_namelen=f_namemax"
         CC-Options:           "-DFUSE_USE_VERSION=26"
      else
         Includes:               sys/statfs.h

  Extra-Libraries:        fuse
  Extra-Lib-Dirs:         /usr/local/lib
  CC-Options:             "-D_FILE_OFFSET_BITS=64"
  Default-Language:       Haskell2010
